# GABI_2021_initiation_python

./: .replit  README.md  pyproject.toml
colstat/: .replit  colstat.py  colstat_correction.py
getseq/: .replit  getseq.py  getseq_correction.py  sequences.fasta
init/: .replit  init.py  init_correction.py
